overflow hidden and navbar button adjusting

--- a/home.html
+++ b/home.html
@@ -1,10 +1,10 @@
 
 <!--Full background video-->
 <div class="video">
-    <video loop autoplay controls width="100%">
+    <video loop autoplay>
         <source src="./img/Archer.loop.mp4">
-        </video>
-    </div>
+    </video>
+</div>
 
 <!--Overlay title box-->
 <div class="homeTitleBox"><p>Archer</p></div>
