--- a/button.html
+++ b/button.html
@@ -4,11 +4,9 @@
     <button ui-sref="home">Home</button>
     <button ui-sref="about">About</button>
     <button ui-sref="favorites">Favs</button>
-</div>
-
-    <div>
-    <a href="https://www.facebook.com/adamshaleen"><i class="fa fa-facebook-square fa-3x social" aria-hidden="true"></i></a>
-    <a href="https://www.instagram.com/adam_shaleen/"><i class="fa fa-instagram fa-3x social" aria-hidden="true"></i></a>
-    <a href="https://twitter.com/search?q=%23heelerpuppy&src=typd"><i class="fa fa-twitter-square fa-3x social" aria-hidden="true"></i></a>
+</div><div>
+    <a href="https://www.facebook.com/adamshaleen" target="_blank"><i class="fa fa-facebook-square fa-3x social" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/adam_shaleen/" target="_blank"><i class="fa fa-instagram fa-3x social" aria-hidden="true"></i></a>
+    <a href="https://twitter.com/search?q=%23heelerpuppy&src=typd" target="_blank"><i class="fa fa-twitter-square fa-3x social" aria-hidden="true"></i></a>
 </div>
 </div>
