resized containers, added loading status

--- a/about.html
+++ b/about.html
@@ -1,11 +1,12 @@
 <!--Image carousel container-->
-<div class="outerImageContainer">
-    <img class="innerImageContainer" src="img/driving.JPG" width="100%"</img>
-</div>
+<!-- <div class="outerImageContainer"> -->
+    <!-- <img class="innerImageContainer" src="img/driving.JPG" width="100%"</img> -->
+<!-- </div> -->
 
 
 <!--Text box outer container and inner container-->
 <div class="outerTextContainer">
+    <img class="innerImageContainer" src="img/driving.JPG" width="100%"</img>
     <div class="innerTextContainer"><div class="text">{{displayAboutText}}</div></div>
 </div>
 
