--- a/button.html
+++ b/button.html
@@ -3,7 +3,7 @@
  <div>
     <button ui-sref="home">Home</button>
     <button ui-sref="about">About</button>
-    <button ui-sref="favorites">Favs</button>
+    <button ng-click="loading()" ui-sref="favorites">Favs</button>
 </div><div>
     <a href="https://www.facebook.com/adamshaleen" target="_blank"><i class="fa fa-facebook-square fa-3x social" aria-hidden="true"></i></a>
     <a href="https://www.instagram.com/adam_shaleen/" target="_blank"><i class="fa fa-instagram fa-3x social" aria-hidden="true"></i></a>
