--- a/fav.html
+++ b/fav.html
@@ -1,10 +1,11 @@
 <!--Google map outer container and map container-->
-<div class="outerMapContainer">
-    <div class="innerMapContainer"><iframe class="map" src="https://www.google.com/maps/d/embed?mid=z167p0CJa_KE.kyentiQhmIZU"></iframe></div>
-</div>
+<!-- <div class="outerMapContainer"> -->
+    <!-- <div class="innerMapContainer"><iframe class="map" src="https://www.google.com/maps/d/embed?mid=z167p0CJa_KE.kyentiQhmIZU"></iframe></div> -->
+<!-- </div> -->
 
 <!--Outer text container and inner text container-->
 <div class="outerTextContainer">
+    <div class="innerMapContainer"><iframe class="map" src="https://www.google.com/maps/d/embed?mid=z167p0CJa_KE.kyentiQhmIZU"></iframe><p id="loading">Loading Map...</p></div>
     <div class="innerTextContainer"><div class="text">{{displayMapText}}</div></div>
 </div>
 
