added img carousel and adjusted map loading text

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
 <!--Text box outer container and inner container-->
 <div class="outerTextContainer">
-    <img class="innerImageContainer" src="img/driving.JPG" width="100%"</img>
+    <img class="innerImageContainer" ng-src="{{pics}}" width="100%"</img>
     <div class="innerTextContainer"><div class="text">{{displayAboutText}}</div></div>
 </div>
 
