--- a/about.html
+++ b/about.html
@@ -1,10 +1,7 @@
-<!--Image carousel container-->
-<!-- <div class="outerImageContainer"> -->
-    <!-- <img class="innerImageContainer" src="img/driving.JPG" width="100%"</img> -->
-<!-- </div> -->
 
+<div class="header"><p>Archer.</p></div>
 
-<!--Text box outer container and inner container-->
+<!--Outer container and inner container-->
 <div class="outerTextContainer">
     <img class="innerImageContainer" ng-src="{{pics}}" width="100%"</img>
     <div class="innerTextContainer"><div class="text">{{displayAboutText}}</div></div>
