fixed navbutton styling, added more links to home page, and updated titles.

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 
-<div class="header"><p>Archer.</p></div>
+<a ui-sref="Archer: Home"><div class="header"><p>Archer.</p></div></a>
 
 <!--Outer container and inner container-->
 <div class="outerTextContainer">
