--- a/fav.html
+++ b/fav.html
@@ -1,4 +1,4 @@
-<div class="header"><p>Archer.</p></div>
+<a ui-sref="Archer: Home"><div class="header"><p>Archer.</p></div></a>
 
 <!--Outer container and inner text container-->
 <div class="outerTextContainer">
