--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href='https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="style.css" media="screen">
+        <!--Custom directive to change the title to the current view-->
         <update-title view-page="state.current.name"></update-title>
     </head>
 
