--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 </div>
 
 <!--Overlay title box-->
-<div class="homeTitleBox"><p>Archer</p></div>
+<div class="homeTitleBox"><p>Archer.</p></div>
 
 <!--Navigation buttons at bottom of page-->
 <nav-buttons></nav-buttons>
