--- a/button.html
+++ b/button.html
@@ -1,9 +1,9 @@
     <!--Navigation buttons at bottom of each page/footer-->
 <div class="navBox">
  <div>
-    <button id="home" ui-sref="Archer: Home">Home</button>
-    <button id="about" ui-sref="Archer: About">About</button>
-    <button id="favorites" ng-click="loading()" ui-sref="Archer: Favorites">Favs</button>
+    <button id="home" ui-sref-active="selected" ui-sref="Archer: Home">Home</button>
+    <button id="about" ui-sref-active="selected" ui-sref="Archer: About">About</button>
+    <button id="favorites" ui-sref-active="selected" ng-click="loading()" ui-sref="Archer: Favorites">Favs</button>
 </div><div>
     <a href="https://www.facebook.com/adamshaleen" target="_blank"><i class="fa fa-facebook-square fa-3x social" aria-hidden="true"></i></a>
     <a href="https://www.instagram.com/adam_shaleen/" target="_blank"><i class="fa fa-instagram fa-3x social" aria-hidden="true"></i></a>
