--- a/fav.html
+++ b/fav.html
@@ -1,7 +1,7 @@
 <a ui-sref="Archer: Home"><div class="header"><p>Archer.</p></div></a>
 
 <!--Outer container and inner text container-->
-<div class="outerTextContainer">
+<div class="contentContainer">
     <div class="innerMapContainer"><iframe class="map" src="https://www.google.com/maps/d/embed?mid=z167p0CJa_KE.kyentiQhmIZU"></iframe><p id="loading">Loading Map...</p></div>
     <div class="innerTextContainer"><div class="text">{{displayMapText}}</div></div>
 </div>
