--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.js"></script>
     <!--Angular UI Route-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+    <!--Typed JS-->
+    <script src="js/typed.js"></script>
     <!--JS files-->
     <script src="js/app.js"></script>
     <script src="js/button.js"></script>
