--- a/button.html
+++ b/button.html
@@ -5,6 +5,7 @@
     <button id="about" ui-sref-active="selected" ui-sref="Archer: About">About</button>
     <button id="favorites" ui-sref-active="selected" ng-click="loading()" ui-sref="Archer: Favorites">Favs</button>
 </div><div>
+    <form id="subscribe" ng-submit="addEmail(emailInput.email)"><input type="email" placeholder="Email Subscribe" ng-model="emailInput.email"></input></form>
     <a href="https://www.facebook.com/adamshaleen" target="_blank"><i class="fa fa-facebook-square fa-3x social" aria-hidden="true"></i></a>
     <a href="https://www.instagram.com/adam_shaleen/" target="_blank"><i class="fa fa-instagram fa-3x social" aria-hidden="true"></i></a>
     <a href="https://twitter.com/search?q=%23heelerpuppy&src=typd" target="_blank"><i class="fa fa-twitter-square fa-3x social" aria-hidden="true"></i></a>
